# runphi_manager

./: .gitignore  README.md
CNI/: partitioned
doc/: readme.txt
docker/: Dockerfile  start_container.sh
rust_runphi/: Cargo.toml  Dockerfile  README.md  compile_rust.sh  shell.nix  shellcargo.nix
rust_runphi/crates/backend_jailhouse/: Cargo.toml
rust_runphi/crates/backend_jailhouse/src/: configGenerator.rs  lib.rs
rust_runphi/crates/backend_jailhouse/src/configGenerator/: boot.rs  communication.rs  cpu.rs  device.rs  fpga.rs  mem.rs  network.rs  rpu.rs  templates.rs
rust_runphi/crates/backend_xen/: Cargo.toml
rust_runphi/crates/backend_xen/src/: configGenerator.rs  lib.rs
rust_runphi/crates/backend_xen/src/configGenerator/: boot.rs  cpu.rs  mem.rs  network.rs
rust_runphi/crates/frontend_to_backend/: Cargo.toml
rust_runphi/crates/frontend_to_backend/src/: lib.rs
rust_runphi/crates/liboci-cli/src/: create.rs  lib.rs
rust_runphi/crates/logging/: Cargo.toml
rust_runphi/crates/logging/src/: lib.rs
rust_runphi/crates/runphi/: Cargo.toml
rust_runphi/crates/runphi/src/: forwarding.rs  main.rs
rust_runphi/crates/runphi/src/frontend/: commands.rs
