[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
psutil = "3.3.0"
chrono = "0.4.38"
nix = "0.20.1"
regex = "1.11.1"
toml = "0.8.19"
f2b = { path = "../frontend_to_backend" }
logging = { path = "../logging" }